# nodejs-server-server/controllers/Query.js
@@ -10,6 +10,8 @@ var users = require('../db/users');
 module.exports.query = function query (req, res, next) {
   var xRequestUsername = req.swagger.params['X-request-username'].value;
   var xRequestPassword = req.swagger.params['X-request-password'].value;
+  var xRequestUseToken = req.swagger.params['X-request-use-token'].value;
+  var xRequestToken = req.swagger.params['X-request-token'].value;
   var channel = req.swagger.params['channel'].value;
   var chaincode = req.swagger.params['chaincode'].value;
   var _function = req.swagger.params['function'].value;
@@ -26,9 +28,64 @@ module.exports.query = function query (req, res, next) {
     params = [];
   }
 
+  //works
+  if (xRequestUseToken)
+  {
+    var clientIP = req.connection.remoteAddress;
+    console.log("USING TOKEN AUTH");
+    //users.updatetoken("jx",clientIP,expire,function (){console.log("CALLBACK")});
+    users.authByToken(xRequestToken, clientIP, function cb(ret){
+      console.log("CALLBACK 2 valid :" + ret);
+      if (!ret.valid)
+      {
+        res.writeHead(401, { "Content-Type": "text/plain" });
+        return res.end("Invalid/Expired token provided");
+      }
+      else
+      {
+
+        console.log('succesfully identified');
+
+
+        //var peerAddr = 'grpc://localhost:7051';
+        var peerAddr = process.env.PEER_ADDR;
+        console.log("peerAddr=", peerAddr);
+        //var peerListenerAddr = 'grpc://localhost:7053';
+        var peerListenerAddr = process.env.PEER_LISTENER_ADDR;
+        console.log("peerListenerAddr=", peerListenerAddr);
+        //var ordererAddr = 'grpc://localhost:7050';
+        var ordererAddr = process.env.ORDERER_ADDR;
+        console.log("ordererAddr=", ordererAddr);
+
+        const request = {
+          //targets : --- letting this default to the peers assigned to the channel
+          chaincodeId: chaincode,
+          fcn: _function,
+          args: params
+        };
+
+        //console.log(req.body.param2);
+        var query = require('../ledger/query.1.js');
+        query.cc_query(ret.username, request, channel, peerAddr, ordererAddr, peerListenerAddr).then(
+          (result) => {
+
+            console.log(result);
+            res.writeHead(200, { "Content-Type": "application/json" });
+            return res.end(result);
+          }
+        );
 
 
 
+
+
+
+
+      }
+    })
+  }
+  else
+  {
   users.comparepwd(xRequestUsername, xRequestPassword, function (err, result) {
     if (err) {
 
@@ -99,4 +156,5 @@ module.exports.query = function query (req, res, next) {
       utils.writeJson(res, response);
     });
     */
+  }
 };
